testing/runner/tests/snapshot_tests/tpch/snapshots/tpch__q5-local-supplier-volume.snap
---
source: tpch.sqltest
expression: |-
  select
          n_name,
          sum(l_extendedprice * (1 - l_discount)) as revenue
      from
          customer,
          orders,
          lineitem,
          supplier,
          nation,
          region
      where
          c_custkey = o_custkey
          and l_orderkey = o_orderkey
          and l_suppkey = s_suppkey
          and c_nationkey = s_nationkey
          and s_nationkey = n_nationkey
          and n_regionkey = r_regionkey
          and r_name = 'MIDDLE EAST'
          and o_orderdate >= '1994-01-01'
          and o_orderdate < '1995-01-01'
      group by
          n_name
      order by
          revenue desc;
info:
  statement_type: SELECT
  tables:
  - customer
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN orders
|--SEARCH lineitem USING INDEX sqlite_autoindex_lineitem_1 (l_orderkey=?)
|--SEARCH supplier USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH nation USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH region USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH customer USING INTEGER PRIMARY KEY (rowid=?)
|--USE SORTER FOR GROUP BY
`--USE SORTER FOR ORDER BY
